; ModuleID = '/home/carl/AnghaBench/sway/swaynag/extr_swaynag.c_handle_global_remove.c'
source_filename = "/home/carl/AnghaBench/sway/swaynag/extr_swaynag.c_handle_global_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_registry = type { i32 }
%struct.swaynag = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_registry*, i64)* @handle_global_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_global_remove(i8* %0, %struct.wl_registry* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wl_registry*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.swaynag*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.wl_registry* %1, %struct.wl_registry** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.swaynag*
  store %struct.swaynag* %9, %struct.swaynag** %7, align 8
  %10 = load %struct.swaynag*, %struct.swaynag** %7, align 8
  %11 = getelementptr inbounds %struct.swaynag, %struct.swaynag* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load %struct.swaynag*, %struct.swaynag** %7, align 8
  %19 = getelementptr inbounds %struct.swaynag, %struct.swaynag* %18, i32 0, i32 0
  store i32 0, i32* %19, align 8
  br label %20

20:                                               ; preds = %17, %3
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
